[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/expandable_diamond_polygon.gd" type="Script" id=1]
[ext_resource path="res://scripts/expandable_diamond.gd" type="Script" id=2]
[ext_resource path="res://scripts/expendable_diamond_line.gd" type="Script" id=3]

[node name="ExpandableDiamond" type="Polygon2D"]
visible = false
position = Vector2( 324.641, 340 )
color = Color( 0.231373, 0.486275, 0.694118, 0.784314 )
antialiased = true
polygon = PoolVector2Array( 0, -200, 200, 0, 0, 200, -200, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Tween" type="Tween" parent="."]

[node name="Portrait" type="Polygon2D" parent="."]
scale = Vector2( 0.5, 0.5 )
antialiased = true
texture_offset = Vector2( 300, 421 )
polygon = PoolVector2Array( 0, -400, 400, 0, 0, 400, -400, 0 )
script = ExtResource( 1 )

[node name="Border" type="Line2D" parent="."]
points = PoolVector2Array( 0, -200, 200, 0, 0, 200, -200, 0, 0, -200 )
width = 5.0
default_color = Color( 0.839216, 0.866667, 1, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true
script = ExtResource( 3 )

[connection signal="tween_all_completed" from="Tween" to="." method="_on_tween_all_completed"]
